--- a/ebdx_view/package.json
+++ b/ebdx_view/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.8.0",
+    "react-js-dialog-box": "^1.1.6",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
